<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageViewEventImage"
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:contentDescription="@string/event_image" android:padding="4dp"/>

            <TextView
                android:id="@+id/textViewEventName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/imageViewEventImage"
                android:text="@string/event_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />

            <TextView
                android:id="@+id/textViewEventDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewEventDate"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/imageViewEventImage"
                android:text="@string/event_description"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/textViewEventLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewEventName"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/textViewEventDate"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/event_location"
                android:textAppearance="@style/TextAppearance.AppCompat" android:textSize="12sp"/>

            <TextView
                android:id="@+id/textViewEventDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewEventName"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/imageViewEventImage"
                android:text="@string/event_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/textViewEventCreator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_alignParentTop="true"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/textViewEventName"
                android:text="@string/event_creator" android:textSize="12sp"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>