<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eventu.DisplayClubPage">

    <TextView
        android:id="@+id/display_club_name"
        android:layout_width="wrap_content"
        android:layout_height="23dp" android:layout_marginStart="160dp"
        android:layout_marginTop="16dp" android:text="TextView"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/display_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_club_name"/>
    <TextView
        android:id="@+id/display_club_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginStart="84dp"
        android:layout_marginTop="8dp" android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_description"/>
    <TextView
        android:id="@+id/display_links"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" android:text="@string/links"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_club_description"/>
    <TextView
        android:id="@+id/display_club_links"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginStart="84dp"
        android:layout_marginTop="8dp" android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_links"/>
    <TextView
        android:id="@+id/display_media_links"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/social_media"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_club_links"/>
    <TextView
        android:id="@+id/display_club_media_links"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginStart="84dp"
        android:layout_marginTop="8dp" android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_media_links"/>
    <TextView
        android:id="@+id/display_contact_info"
        android:layout_width="wrap_content"
        android:layout_height="15dp" android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" android:text="@string/contact_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_club_media_links"/>
    <TextView
        android:id="@+id/display_club_contact_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginStart="84dp"
        android:layout_marginTop="8dp" android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_contact_info"/>
    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp" android:onClick="editPage"
        android:text="@string/edit_button" android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>
