<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eventu.EditClubPage">

    <TextView
        android:id="@+id/club_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginStart="160dp"
        android:layout_marginTop="16dp" android:text="TextView"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/club_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/club_description"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"/>
    <EditText
        android:id="@+id/club_links"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="8dp"
        android:ems="10" android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/links"/>
    <TextView
        android:id="@+id/links"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" android:text="@string/links"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/club_description"/>
    <TextView
        android:id="@+id/social_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" android:text="@string/social_media"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/club_links"/>
    <EditText
        android:id="@+id/club_social_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="8dp"
        android:ems="10" android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/social_media"/>
    <TextView
        android:id="@+id/contact_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" android:text="@string/contact_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/club_social_media"/>
    <EditText
        android:id="@+id/club_contact_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="8dp"
        android:ems="10" android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_info"/>
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginBottom="16dp"
        android:layout_marginStart="148dp" android:onClick="updatePage"
        android:text="@string/fui_done"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/club_name"/>
</android.support.constraint.ConstraintLayout>
